syntax = "proto3";

package vuong.app.v1.message;
option java_package = "com.vuong.app.v1.message";
option java_multiple_files = true;
option java_outer_classname = "MessageProto";

import "google/protobuf/any.proto";

message GrpcSuccessResponse {
  google.protobuf.Any result = 1;
}

enum GrpcErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_BAD_REQUEST = 400;
  ERROR_CODE_NOT_FOUND = 404;
}

message GrpcErrorResponse {
  GrpcErrorCode error_code = 1;
  string message = 2;
}

message GrpcRequest {
  string correlation_id = 1;
  google.protobuf.Any request = 2;
}

message GrpcResponse {
  oneof response {
    GrpcSuccessResponse success_response = 1;
    GrpcErrorResponse error_response = 2;
  }
}
